--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,81 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+  /* Primary Colors */
+  --primary-blue: #578aea;
+  --light-blue: #f4f8ff;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  /* Text Colors */
+  --text-gray: #585858;
+  --text-light-gray: #a0a0a0;
+  --text-white-gray: #dddddd;
+  --text-blue: #578aea;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  /* Background Colors */
+  --background-main: #ffffff;
+  --background-sub: #fafafa;
+  --background-gradient-start: #90b6ff;
+  --background-gradient-end: #e8edff;
+
+  /* Calendar Colors */
+  --calendar-pink: #ffc6c6;
+  --calendar-yellow: #ffd596;
+  --calendar-peach: #ffed8e;
+  --calendar-green: #cce2c9;
+  --calendar-skyblue: #a8d6f8;
+  --calendar-blue: #748aff;
+  --calendar-purple: #cea7ff;
+  --calendar-gray: #8da1c6;
+
+  /* Font Family */
+  --font-family: 'Noto Sans KR', sans-serif;
+
+  /* Font Weights */
+  --font-weight-regular: 400;
+  --font-weight-medium: 500;
+  --font-weight-bold: 600;
+
+  /* Font Sizes */
+  --font-size-base: 1rem; /* 기본 폰트 사이즈 (16px) */
+  --font-size-h1: 2rem; /* 32px */
+  --font-size-h2: 1.5rem; /* 24px */
+  --font-size-h3: 1.25rem; /* 20px */
+  --font-size-h4: 1rem; /* 16px */
+
+  /* Shadows */
+  --shadow-default: 0px 4px 30px 0px rgba(215, 215, 215, 0.5);
+
+  /* Borders */
+  --border-default: 1px solid;
+  --border-radius-small: 10px;
+  --border-radius-medium: 20px;
+  --border-radius-large: 25px;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+
+* {
+  margin: 0;
+  padding: 0;
 }
 
 body {
   margin: 0;
   display: flex;
   place-items: center;
+  font-family: var(--font-family);
+  background-color: var(--background-main);
+  color: var(--text-gray);
   min-width: 320px;
   min-height: 100vh;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+a {
+  text-decoration: none;
+  color: var(--text-gray);
+}
+
+a:hover {
+  color: var(--text-blue);
 }
